--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "angular-route": "^1.5.9",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "firebase-admin": "^4.0.3",
+    "mongoose": "^4.7.1"
   }
 }
