--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.14.0",
     "firebase-admin": "^4.0.3",
     "jquery": "^3.1.1",
+    "moment": "^2.17.1",
     "mongoose": "^4.7.1"
   }
 }
