--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "angular-route": "^1.5.9",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "dotenv": "^2.0.0",
     "e": "0.0.4",
     "express": "^4.14.0",
     "firebase-admin": "^4.0.3",
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
-    "mongoose": "^4.7.1"
+    "mongoose": "^4.7.1",
+    "sendgrid": "^4.7.1",
+    "smtpapi": "1.2.0"
   }
 }
