--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "mongoose": "^4.7.1",
+    "node-schedule": "^1.2.0",
     "nodemailer": "^2.7.0",
     "sendgrid": "^4.7.1",
     "smtpapi": "1.2.0"
