--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "angular-route": "^1.5.9",
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
+    "cron": "^1.1.1",
     "dotenv": "^2.0.0",
     "e": "0.0.4",
     "express": "^4.14.0",
