--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "e": "0.0.4",
     "express": "^4.14.0",
     "firebase-admin": "^4.0.3",
+    "http": "0.0.0",
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "mongoose": "^4.7.1",
     "node-schedule": "^1.2.0",
     "nodemailer": "^2.7.0",
+    "request": "^2.79.0",
     "sendgrid": "^4.7.1",
     "smtpapi": "1.2.0"
   }
