--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "moment": "^2.17.1",
     "mongoose": "^4.7.1",
     "node-schedule": "^1.2.0",
-    "nodemailer": "^2.7.0",
+    "nodemailer": "^2.7.0"
   }
 }
